fix item font size + cart visibility

--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -149,6 +149,6 @@
 }
 
 .w3-modal-content {
-    background-color: rgba(187, 235, 235, 0.7);
+    background-color: rgba(187, 235, 235, 0.95);
     /* width: 400px; */
 }
