--- a/public/css/style.css
+++ b/public/css/style.css
@@ -476,7 +476,7 @@ header .header-logout button {
     /* display: none; */
     margin-top: 1rem;
     color: var(--black);
-    font-size: 2.5rem;
+    font-size: 2.0rem;
 }
 
 .menu .image-container .image .content p {
